Bug 283563 - KMail2 migration failed
Summary: KMail2 migration failed
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-07 19:45 UTC by nucleo
Modified: 2012-08-01 17:28 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments
Kresource Migration Tool (30.76 KB, image/png)
2011-10-10 10:02 UTC, nucleo
Details
KMail Migration (50.29 KB, image/png)
2011-10-10 10:04 UTC, nucleo
Details
Migration Failed (24.72 KB, image/png)
2011-10-10 10:07 UTC, nucleo
Details
kdepim-4.7.2-alt-migration.patch (957 bytes, patch)
2011-10-14 10:34 UTC, Sergey V Turchin
Details
kdepim-4.7.2-alt-migration.patch (1.05 KB, patch)
2011-10-14 11:27 UTC, Sergey V Turchin
Details
kdepim-4.7.2-kmail-migration.patch (1.07 KB, patch)
2011-10-14 17:13 UTC, Kevin Kofler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nucleo 2011-10-07 19:45:26 UTC
Version:           unspecified (using KDE 4.7.1) 
OS:                Linux

Migration in Kmail2 failed After update from KDE 4.6.5 to 4.7.1.

Reproducible: Didn't try


Actual Results:  
When Kmail2 started first time after update there was error message about failed migration and that need to run "kmail-migrator --interactive" manually.

But when running "kmail-migrator --interactive" I got error message:
Migration of kmailrc has already run, not running it again

I restored backup of ~/.kde and figured out that if run "kmail-migrator --interactive" before first start Kmail2 then migration will be successful.
But if Kmail2 started first then migration will be failed.

Expected Results:  
Migration should work when starting Kmail2.
Comment 1 nucleo 2011-10-07 20:02:45 UTC
Before update to KDE 4.7.1 I have Kmail 1.13.7 installed with KDE 4.6.5.

Looks like the same problem also in KDE 4.7.2.
Comment 2 Laurent Montel 2011-10-10 08:28:25 UTC
Ok and what is the error ????
it's failed ok
but why it failed ?
Comment 3 nucleo 2011-10-10 10:02:48 UTC
Created attachment 64384 [details]
Kresource Migration Tool

When KDE 4.7.1 started firest time after update opened window "Kresource Migration Tool" with message that Migration of 'resource' succeeded.
Comment 4 nucleo 2011-10-10 10:04:12 UTC
Created attachment 64385 [details]
KMail Migration

When I started Kmail "Kmail Migration" opened and I pressed "Migrate Now"
Comment 5 nucleo 2011-10-10 10:07:45 UTC
Created attachment 64386 [details]
Migration Failed

Then appeared this window with error message:
Migration to Kmail 2 failed. In case you want to try again , run 'kmail-migrator --interactive' manually.

But when I tried this command there was message:
Migration of kmailrc has already run, not running it again

And I can reproduce this every time when using saved .kde dir.
Comment 6 Laurent Montel 2011-10-10 14:15:03 UTC
it doesn't give me info about failed :)
Comment 7 nucleo 2011-10-10 14:20:22 UTC
(In reply to comment #6)
> it doesn't give me info about failed :)

If you tell me what additional information needed and how can I get it then I can provide it here.
Comment 8 nucleo 2011-10-10 15:09:07 UTC
So when I running kmail from command line I got this:

$ kmail
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
kmail-migrator(28579) main: Migration of kmailrc has already run, not running it again 
kmail2(28576): Akonadi migration failed! 
kmail2(28576): command was:  ("/usr/bin/kmail-migrator", "--interactive-on-change") 
kmail2(28576): exit code:  4 
kmail2(28576): stdout:  "" 
kmail2(28576): stderr:  ""
Comment 9 Sergey V Turchin 2011-10-13 15:10:34 UTC
KMail write Version=1 to kmail-migratorrc before start kmail-migrator
Comment 10 nucleo 2011-10-13 17:20:22 UTC
(In reply to comment #9)
> KMail write Version=1 to kmail-migratorrc before start kmail-migrator

And then kmail-migrator fails because of this commit

https://projects.kde.org/projects/kde/kdepim-runtime/repository/revisions/db0c79245cec967f5af1c94f62ae377dd0eb81a4
Comment 11 Kevin Kofler 2011-10-13 18:11:10 UTC
Good catch. So I take it that KMail is broken and needs to be fixed (by removing 1 line?), right?
Comment 12 Sergey V Turchin 2011-10-14 10:34:50 UTC
Created attachment 64509 [details]
kdepim-4.7.2-alt-migration.patch

fixes the problem
Comment 13 Laurent Montel 2011-10-14 10:49:28 UTC
No it's not good this patch.
You don't want to migrate => you wrote it.

With your patch you can't say no.

So it(s not good.
Comment 14 Sergey V Turchin 2011-10-14 11:27:29 UTC
Created attachment 64515 [details]
kdepim-4.7.2-alt-migration.patch

'("Enabled", false)' may be changed to '("Version", targetVersion)' in first hunk
Comment 15 Kevin Kofler 2011-10-14 16:49:30 UTC
> '("Enabled", false)' may be changed to '("Version", targetVersion)' in first
> hunk

Yes, I think you should change that. When/if there will be another migration of this kind needed, the user might want THAT migration to happen.
Comment 16 Kevin Kofler 2011-10-14 17:13:49 UTC
Created attachment 64523 [details]
kdepim-4.7.2-kmail-migration.patch

This version of the patch disables only this migration permanently and not future ones (with new target versions.)

That said, I'm not convinced that that hunk is correct in the first place. Does a user really expect a "no" to be permanent? I'd expect it to be a "Not now", not a "Never".
Comment 17 Kevin Kofler 2011-10-14 17:26:30 UTC
(That said, getting prompted again and again with no way to opt out would also be an annoyance, so I guess distros looking for a quick fix should use my patch from comment #16.)

By the way, the commit which caused this regression is this commit by David Faure:
https://projects.kde.org/projects/kde/kdepim-runtime/repository/revisions/60f8c01542f86bd04cafd68b91c2f609d73d4aa2
which added the check preventing running the migration manually when it was already run.
Comment 18 nucleo 2011-10-14 19:45:28 UTC
I tested patch from comment #16.
Migration works as expected.
Comment 19 James Sturgis 2011-10-24 15:40:11 UTC
Clearly I have the same bug... but currently I have lost all my mail, and every time I try to start kmail I get the error-message that "Failed to fetch the resource collection"
Comment 20 nucleo 2011-10-24 15:44:23 UTC
(In reply to comment #19)
> Clearly I have the same bug... but currently I have lost all my mail, and every
> time I try to start kmail I get the error-message that "Failed to fetch the
> resource collection"

Maybe this information can be useful for you
https://wiki.kubuntu.org/OneiricOcelot/Final/Kubuntu/Kmail2
Comment 21 James Sturgis 2011-10-24 16:07:09 UTC
 Partially helpful, thank you... now I no longer have the "Failed to fetch
resource collection" but

1) a collection of error messages during the interactive migration "KMail
folders: unusable configuration".
2) a migration request when i start kmail
3) no mails in the correctly transfered directory/folder structure



On Mon, Oct 24, 2011 at 5:44 PM, nucleo <nucleo@fedoraproject.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=283563
>
>
>
>
>
> --- Comment #20 from nucleo <nucleo fedoraproject org>  2011-10-24 15:44:23
> ---
> (In reply to comment #19)
> > Clearly I have the same bug... but currently I have lost all my mail, and
> every
> > time I try to start kmail I get the error-message that "Failed to fetch
> the
> > resource collection"
>
> Maybe this information can be useful for you
> https://wiki.kubuntu.org/OneiricOcelot/Final/Kubuntu/Kmail2
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
>
Comment 22 Chris Samuel 2012-05-10 11:58:27 UTC
Appears not to be fixed in KDE 4.8, at least according to the latest update on the Kubuntu LaunchPad bug entry for this problem:

https://bugs.launchpad.net/bugs/857828

# Just incredible that is isn't fixed with a new LTS release.
#
# My company just decided to stop using KDE due to bosses finding it
# unacceptable that people loses emails and configurations due to just
# a update. Back to windows.
Comment 23 Martin Koller 2012-08-01 17:23:37 UTC
Git commit 15bd943e1add04435e03f6cdf31b37dd976eb8d1 by Martin Koller.
Committed on 01/08/2012 at 19:19.
Pushed by mkoller into branch 'KDE/4.9'.

Fix for: kmail does never start migration

see also https://git.reviewboard.kde.org/r/105788/
FIXED-IN: 4.9.1

M  +4    -4    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/15bd943e1add04435e03f6cdf31b37dd976eb8d1
Comment 24 Martin Koller 2012-08-01 17:28:19 UTC
Git commit 12f1cfa98eb7c8a0d942bcc09c54ce4289ac95fd by Martin Koller.
Committed on 01/08/2012 at 19:19.
Pushed by mkoller into branch 'master'.

Fix for: kmail does never start migration

see also https://git.reviewboard.kde.org/r/105788/
FIXED-IN: 4.9.1

M  +4    -4    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/12f1cfa98eb7c8a0d942bcc09c54ce4289ac95fd