Fix for: kmail does never start migration

see also https://git.reviewboard.kde.org/r/105788/

BUG: 283563
FIXED-IN: 4.9.1